--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
 
 form {
   display: flex;
-  justify-content: flex-end;  
+  align-items: center;  
 }
 
 .contenedor-input {
@@ -38,6 +38,7 @@ form {
 
 .button-header {
   margin: 6px;
+  font-size: 24px;
   border: none;
   background: none;
   cursor: pointer;
@@ -51,7 +52,8 @@ form {
 
 .contenedor-gif {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
   gap: 16px;
   padding: 20px;
 }
